V5 questionnaire : lieux et marchés.

--- a/res/data/mail/signup/cet.qstprod.signup.html.mail.content.html
+++ b/res/data/mail/signup/cet.qstprod.signup.html.mail.content.html
@@ -11,6 +11,7 @@
 		<h3>Veuillez noter votre identifiant cetcal.site : <b>[idcetwww]</b></h3>
 		<p>Veuillez garder cet identifiant. Il vous sera utile pour vous connecter prochainement. <b>S'il vient à être perdu, contactez nous depuis la rubrique contact</b> sur notre <a href="https://www.cetcal.site/" target="_blank">page d'accueil</a>.
 		<p>Vous pourrez administrer votre fiche producteur prochainement en cliquant sur "Votre page producteur" depuis notre <a href="https://www.cetcal.site/" target="_blank">page d'accueil</a>.</p>
-		<p>L'équipe CET.</p>
+		<p>Nous reviendrons vers vous rapidement dès que l'annuaire sera opérationnel.</p>
+		<p>En vous remerciant pour votre contribution,<br>L'équipe Castillonnais en Transition.</p>
 	</body>
 </html>
